<resources>
    <string name="app_name">Email Mobile App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inbox">Inbox</string>
    <string name="important">Important</string>
    <string name="send">Send</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="email">Email</string>
    <string name="mahadbinnaeem_gmail_com">mahadbinnaeem@gmail.com</string>

    <string name="string_spam">Spam</string>
    <string name="action_reportspam">reportspam</string>
    <string name="action_reportasspam">Report as spam</string>
    <string name="action_markasimportant">Mark as Important</string>

</resources>